#
# date start with a number and can then include anything, they are like comments
# 23/07/2002 - T.o.M.E 2.0.0 aka "Point of No Return"

# special tag to specify the current version
[V]  TomeNET 4.0.0 aka "Packet of No Return"

# bug.txt should follow the exact same format

03/08/2002 (Jir)
# sorry, I cannot help fixing bugs ;)
[B]- CS saving was broken
[O]- new artifact 'Pint of Ale of Dwarves' :)

02/08/2002 (Jir)
[G]- one needs at least 1 kill count to mimic that form (namely townies)
[G]- darkness, traps, hold mimic spells implemented.
[G]- unavailable mimic spells are removed from the list.
[D]- more traps for empty(arena) level (it was too sparse)
[I]- chardump omits empty inventory slot.
[I]- killed monster list improved for mimicry
[B]- msg history in chardump was garbled if contains '%'
[B]- store buying limit display was wrong.

01/08/2002 (Jir)
[m]- m_ptr->ai_state handles what a monster is doing.
[m]- fleeing monster no longer teleports if out of sight.
[m]- aquatic monster out of water runs for water.
[m]- monster has learnt to avoid grids tainted by a player.
[m]- aquatics resist water attack
[B]- teleport when dying caused crash (in_bounds4)

31/07/2002 (Jir)
# take refuse to branch while Evileye is doing account stuffs.
[G]- lasting-effect spell backported.
     you can test it with Rogue's "Stinking Cloud" spell.
     TODO: backport the spells themselves. AI to run from this.
[I]- always_show_lists client option (from EyAngband)
[P]- DRIDER receives ESP_DRAGON and Flying;  ESP is reduced instead.
[G]- slow-digestion works better for those who need a lot of food.
[B]- slow-digestion caused satiation if player is slow ( < -5).

29/07/2002 (Jir)
# comfortable death set :)
[m]- timefun.txt/timenorm.txt.
[I]- message history is added to the character dump.
[I]- mimic form is shown in the character screen('C').
[I]- auto char-dump when died. (screenshot would be nifty..)
[I]- at last! tombscreen implemented.